--- a/01_nginx.yaml
+++ b/01_nginx.yaml
@@ -1,3 +1,13 @@
 - name: This playbook is to insatll nginx
   hosts: all
   become: true
+  tasks:
+  - name: Install nginx
+    ansible.builtin.yum:
+      name: nginx
+      state: latest
+  - name: Install nginx
+    ansible.builtin.service:
+      name: nginx
+      state: started
+  
