--- a/01_nginx.yaml
+++ b/01_nginx.yaml
@@ -6,7 +6,7 @@
     ansible.builtin.yum:
       name: nginx
       state: latest
-  - name: Install nginx
+  - name: start nginx service
     ansible.builtin.service:
       name: nginx
       state: started
