--- a/04_varfile.yaml
+++ b/04_varfile.yaml
@@ -5,5 +5,5 @@
   tasks:
   - name: This is to print variables from the file
     ansible.builtin.debug:
-      msg: " {{course}} is prepared by {{trainer}} with fees of {{fees}} and duriation of {{duration}} "
+      msg: " we are learning {{course}} is prepared by {{trainer}} with fees of {{fees}} and duriation of {{duration}} "
 
