--- a/variables.yaml
+++ b/variables.yaml
@@ -1,3 +1,5 @@
-NAME: Sivakumar-files
-DURATION: 120HRS
-TRAINER: Sivakumar
+course: DEVOPS
+trainer: sivakumarreddy
+fees: 20k
+duration: 4months
+
