--- a/09_completevar.yaml
+++ b/09_completevar.yaml
@@ -5,7 +5,7 @@
   # vars_files:
   # - variables.yaml
   vars_prompt:
-  - name: input
+  - name: course
     prompt: What is your input?
     private: false
   tasks: 
