--- a/11_roboshopuser.yaml
+++ b/11_roboshopuser.yaml
@@ -8,3 +8,6 @@
   - name: display the output
     ansible.builtin.debug: 
       msg: "output is {{output}}"
+  - name: Display output with rc
+    ansible.builtin.debug:
+      msg: "output is {{output.rc}}
