--- a/11_roboshopuser.yaml
+++ b/11_roboshopuser.yaml
@@ -12,6 +12,7 @@
     ansible.builtin.debug:
       msg: "output is {{output.rc}}"
   - name: create a user
+    become: true
     ansible.builtin.user:
       name: roboshop
     when: output.rc != 0
