--- a/13_installloop.yaml
+++ b/13_installloop.yaml
@@ -4,7 +4,7 @@
   tasks:
   - name: This task is to install the packages
     ansible.builtin.yum:
-      name : "{{item}}""
+      name : "{{item}}"
       state: installed
     loop:
     - nginx
